--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ keywords: ityouknow,纯洁的微笑,Spring,Spring Boot,Spring Cloud,MongoDB,Jvm,
 encoding: "utf-8"
 favicon: favicon.png 
 
-repository: ityouknow/ityouknow.github.io
-github_url: https://github.com/ityouknow
+repository: zdd321/zdd321.github.io
+github_url: https://github.com/zdd321
 cnblog_url: http://www.cnblogs.com/ityouknow
-url: http://www.ityouknow.com
+url: https://zdd321.github.io
 enforce_ssl: ityouknow.com
 
 ## Gem
